Added fix for navigation amcl

--- a/docker_gazebo/Dockerfile.master_ros2
+++ b/docker_gazebo/Dockerfile.master_ros2
@@ -75,6 +75,8 @@ COPY hospital.world /opt/ros/humble/share/turtlebot3_gazebo/worlds/
 
 COPY turtlebot3_hospital.launch.py /opt/ros/humble/share/turtlebot3_gazebo/launch/
 
+COPY burger.yaml /opt/ros/humble/share/turtlebot3_navigation2/param/
+
 # Copy ros ws entry point
 COPY ros_ws_entrypoint.sh /ros_ws_entrypoint.sh
 
